Fix npm vulnerabilities

--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           - v1-dependencies-
 
-      - run: yarn install
+      - run: npm install
 
       - save_cache:
           paths:
@@ -23,5 +23,5 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: yarn lint
-      - run: yarn test-ci
+      - run: npm run lint
+      - run: npm run test-ci
